--- a/styles/scss/login.scss
+++ b/styles/scss/login.scss
@@ -54,7 +54,7 @@ body {
         font-size: 12px;
         font-weight: 700;
         height: 40px;
-        width: 100px;
+        width: $button-width;
         background: -webkit-linear-gradient(bottom, #007d68, #00bcc0);
     }
 }
