--- a/styles/scss/variables.scss
+++ b/styles/scss/variables.scss
@@ -1,1 +1,8 @@
 @import '../scss/palette.scss';
+
+$background-z-index: 10;
+$main-wraper-z-index: 20;
+$modal-z-index: 30;
+
+$button-width: 100px;
+$image-height: 350px;
